Updated the main container and the Aggregator Component

--- a/pom.xml
+++ b/pom.xml
@@ -84,12 +84,12 @@
 						</fileset>
 						
 						<!--Remove the following filesets to speed up compile time-->
-						<fileset>
-							<directory>node</directory>
-						</fileset>
-						<fileset>
-							<directory>node_modules</directory>
-						</fileset>
+						<!--<fileset>-->
+							<!--<directory>node</directory>-->
+						<!--</fileset>-->
+						<!--<fileset>-->
+							<!--<directory>node_modules</directory>-->
+						<!--</fileset>-->
 					
 					</filesets>
 				</configuration>
