--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-local": "ng serve --host 0.0.0.0 --port 4201 --live-reload-port 49153 --proxy-config proxy.conf.json",
+    "dev": "ng serve --host 0.0.0.0 --port 4201 --live-reload-port 49153 --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
